# kitokei

./: Cargo.toml  flake.nix  update-queries.sh
src/: language.rs  lib.rs  main.rs
