[package]
name = "kitokei"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
arrow-array = "51.0.0"
comfy-table = "7.1.0"
itertools = "0.12.1"
parquet = "51.0.0"
tree-sitter = "0.22.2"
tree-sitter-python = "0.21.0"

[build-dependencies]
cc="*"
