[package]
name = "kitokei"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
arrow-array = "51.0.0"
clap = { version = "4.5.4", features = ["derive", "string"] }
comfy-table = "7.1.0"
dashmap = { version = "5.5.3", features = ["rayon"] }
ignore = { version = "0.4.22", features = ["simd-accel"] }
itertools = "0.12.1"
parquet = "51.0.0"
rayon = "1.10.0"
tree-sitter = "0.20"
tree-sitter-python = { version = "0.20", optional = true }
tree-sitter-rust = { version = "0.20", optional = true }

[build-dependencies]
cc="*"

[features]
default = ["all-languages"]
all-languages = ["rust", "python"]
python = ["dep:tree-sitter-python"]
rust = ["dep:tree-sitter-rust"]
